--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!-- CSS will be injected by webpack here -->
   <!-- Preload link tags will be injected by webpack here -->
 
-<link rel="preload" href="polyfills.bundle.js" as="script"/><link rel="preload" href="main.bundle.js" as="script"/></head>
+<link rel="preload" href="main.bundle.js" as="script"/><link rel="preload" href="polyfills.bundle.js" as="script"/></head>
 
 <body>
 
@@ -61,5 +61,5 @@
   </app>
 
   <!-- Scripts will be injected by webpack here -->
-<script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="main.bundle.js" async></script></body>
+<script type="text/javascript" src="main.bundle.js" async></script><script type="text/javascript" src="polyfills.bundle.js"></script></body>
 </html>
