--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Angular2 Webpack Starter by @gdi2290 from @AngularClass</title>
+  <title>Les Floralies POS</title>
   <meta name="description" content="Angular2 Webpack Starter by @gdi2290 from @AngularClass">
   <!-- base url -->
   <base href="/">
