--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="/assets/css/jasny-bootstrap.min.css">
   <link rel="stylesheet" href="/assets/custom-scroll/jquery.mCustomScrollbar.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/4.17.43/build/css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="/assets/css/animate.css">
   
   <!-- Configured Head Tags  -->
