--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
   <link rel="stylesheet" href="/assets/custom-scroll/jquery.mCustomScrollbar.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/4.17.43/build/css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="/assets/css/animate.css">
+  <style>
+    
+  
+.image_container{
+    width: 300px;
+    height: 300px;
+    text-align: center;
+    line-height: 300px;
+}
+
+.image_container img {
+    vertical-align: middle;
+}
+  </style>
   
   <!-- Configured Head Tags  -->
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-icon-57x57.png">
@@ -58,7 +72,11 @@
 <body>
 
   <app>
-    Loading...
+  Loading...
+      <!-- <div class="image_container">
+          <img src="assets/img/logo_blue.png" height="300" width="300">
+      </div> -->
+
   </app>
 
   <!-- Scripts will be injected by webpack here -->
